<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".App.Login.LoginActivity">

        <ImageView
            android:id="@+id/icon_login"
            android:layout_width="match_parent"
            android:layout_height="369dp"
            android:src="@drawable/login1r"
            android:background="@drawable/ic_login"
            tools:ignore="ContentDescription,MissingConstraints"
            tools:layout_editor_absoluteX="3dp" />

        <TextView
            android:id="@+id/et_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:text="@string/signin"
            android:textColor="@color/mycolor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/icon_login"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="40sp"
            android:layout_marginTop="52dp"
            android:textSize="11sp"
            android:background="@drawable/grid_1"
            android:foregroundGravity="center"
            android:gravity="center"
            android:hint="@string/email_l"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_signup"
            tools:ignore="MissingConstraints,SmallSp" />

        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="300dp"
            android:layout_height="40sp"
            android:layout_marginTop="16dp"
            android:textSize="11sp"
            android:background="@drawable/grid_1"
            android:foregroundGravity="center"
            android:gravity="center"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            tools:ignore="MissingConstraints"
            android:autofillHints="" />

        <Button
            android:id="@+id/signin"
            android:layout_width="180dp"
            android:layout_height="35sp"
            android:layout_marginTop="36dp"
            android:background="@drawable/button"
            android:foregroundGravity="center_vertical"
            android:gravity="center"
            android:text="@string/signin"
            android:onClick="onLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/forgetpassword"
            android:layout_width="132dp"
            android:layout_height="29dp"
            android:layout_marginStart="44dp"
            android:layout_marginLeft="44dp"
            android:layout_marginTop="40dp"
            android:gravity="center_vertical"
            android:text="@string/forget_password"
            android:textColor="@color/mycolor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signin"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/or"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/forgetpassword"
            app:layout_constraintTop_toBottomOf="@+id/signin"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/signup"
            android:layout_width="125dp"
            android:layout_height="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/mycolor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.766"
            app:layout_constraintStart_toEndOf="@+id/or"
            app:layout_constraintTop_toBottomOf="@+id/signin"
            tools:ignore="MissingConstraints" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

